<resources>
    <string name="app_name">Part7-1-2</string>
    <string name="title1">기다리다</string>
    <string name="place1">윤하</string>
    <string name="video1">video1</string>

    <string name="title2">선물</string>
    <string name="place2">멜로망스</string>
    <string name="video2">video2</string>

    <string name="title3">묘해, 너와</string>
    <string name="place3">디에이드</string>
    <string name="video3">video3</string>
</resources>
