<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/video1"
        android:tag="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="play"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:background="@android:color/holo_orange_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title1"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video2"
        android:tag="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="play"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:background="@android:color/holo_blue_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place2"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video3"
        android:tag="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:onClick="play">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingRight="5sp"
            android:layout_weight="2"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:background="@android:color/holo_green_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title3"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place3"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>